--- a/privacy.html
+++ b/privacy.html
@@ -67,8 +67,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <!-- <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#features">App Details</a></li>
+          <li><a href="javascript:history.back()">Home</a></li>
+          <!--<li><a href="#features">App Details</a></li>
           <li><a href="#details">App Features</a></li> -->
           <li class="btn btn-outline-dark btn-sm" style="border-color: #FF4081;"><a href="#contact">Contact Us</a></li>
         </ul>
@@ -237,7 +237,7 @@
           <div class="col-lg-3 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="100">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="javascript:history.back()">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
