--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#features">App Details</a></li>
-          <li><a href="#details">App Features</a></li>
+          <li><a href="#details">App Features</a></li>          
+          <li><a href="#videos">App Videos</a></li>
           <li class="btn btn-outline-dark btn-sm" style="border-color: #FF4081;"><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -254,7 +255,31 @@
       </div>
     </section><!-- End Details Section -->
 
+    <section id="videos" class="videos">
+      <div class="container">
+        <div class="row">
+          
+          <div class="section-title w-100">
+            <h2>App Videos</h2>
+          </div>
 
+          <div class="col-12 col-sm-6 col-md-4">
+            <iframe width="100%" height="538" src="https://www.youtube.com/embed/5z2Zh1l0Qic" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-4">
+            <iframe width="100%" height="538" src="https://www.youtube.com/embed/2jcA2Sq3-x0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-4">
+            <iframe width="100%" height="538" src="https://www.youtube.com/embed/namtaxjxKy0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+          <div class="clearfix"></div>
+
+        </div>
+      </div>
+    </section>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
